samples/_failures_safe/1761645726_30aef4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6ca4e93.c: In function ‘main’:
./samples/SAFE/__tmp_e6ca4e93.c:159:9: error: expected declaration or statement at end of input
  159 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e6ca4e93.c:159:9: error: expected declaration or statement at end of input
